--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <input type="text" class="form-control" id="search" placeholder="&#xf002; Nature"
           style="font-family: FontAwesome;">
       </div>
-      <button type="button" id="search-btn" class="btn btn-primary mb-2">Search<i
+      <button type="button" id="search-btn" class="btn btn-secondary mb-2">Search<i
           class="fas fa-search ml-2"></i></button>
       <button type="button" onclick="pageRefresher()" class="btn btn-danger mb-2 ml-2">Refresh<i
           class="fas fa-times ml-2"></i></button>
@@ -43,7 +43,7 @@
         <div class="input-group col-md-3 mb-2 mb-md-0">
           <input class="form-control" id="duration" placeholder="slider change duration">
         </div>
-        <button onclick="createSlider()" id="create-slider" class="btn btn-primary px-5">Create slider</button>
+        <button onclick="createSlider()" id="create-slider" class="btn btn-secondary px-5">Create slider</button>
       </div>
       <div class="row gallery">
 
