--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <div class="justify-content-around align-items-center mt-3 gallery-header mb-2">
         <h3 class="head-title text-center">Select image for create slider</h3>
         <div class="input-group col-md-3 mb-2 mb-md-0">
-          <input class="form-control" id="duration" placeholder="slider change duration">
+          <input class="form-control" id="duration" placeholder="set slider duration in ms">
         </div>
         <button onclick="createSlider()" id="create-slider" class="btn btn-secondary px-5">Create slider</button>
       </div>
